--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "react-search-autocomplete": "^5.4.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
