--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.18",
+    "async-await-error-handling": "^0.5.2",
     "axios": "^0.21.1",
     "node-sass": "5.0.0",
     "react": "^17.0.2",
