--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-lottie": "^1.2.6",
     "@types/react-redux": "^7.1.18",
     "async-await-error-handling": "^0.5.2",
     "axios": "^0.21.1",
@@ -21,6 +22,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-lottie": "^1.2.3",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "react-search-autocomplete": "^5.4.2",
